tests/baselines/reference/parserConstructorDeclaration3.errors.txt
==== tests/cases/compiler/parserConstructorDeclaration3.ts (1 errors) ====
    class C {
      export constructor() { }
      ~~~~~~
!!! parserConstructorDeclaration3.ts(2,3): error TS1031: 'export' modifier cannot appear on a class element.
    }